<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <Button
        android:id="@+id/savebtn"
        android:layout_width="140dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.799"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/titleForInfo"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_for_page_1"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameInputBox"
        android:layout_width="392dp"
        android:layout_height="48dp"
        android:hint="Input Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleForInfo"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/inputBoxLabelfn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="12dp"
        android:text="@string/label_fn_inputbox"
        app:layout_constraintBottom_toTopOf="@+id/nameInputBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleForInfo"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/labelforinputboxage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_age_inputbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputBox"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/ageInputBox"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Input Number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toEndOf="@+id/labelforinputboxage"
        app:layout_constraintTop_toBottomOf="@+id/nameInputBox"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/hightInputBox"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Input Number"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toEndOf="@+id/labelforinputboxage2"
        app:layout_constraintTop_toBottomOf="@+id/ageInputBox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/unit1"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:text="unit1"
        app:layout_constraintBottom_toTopOf="@+id/savebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/hightInputBox"
        app:layout_constraintTop_toBottomOf="@+id/ageInputBox"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/labelforinputboxage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Height_inputbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputBox"
        app:layout_constraintVertical_bias="0.121" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:text="ToggleButton"
        android:textAllCaps="false"
        android:textOff="@string/unit_1"
        android:textOn="@string/unit_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wightInputBox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/unit2"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:text="unit2"
        app:layout_constraintBottom_toTopOf="@+id/savebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/hightInputBox"
        app:layout_constraintTop_toBottomOf="@+id/ageInputBox"
        app:layout_constraintVertical_bias="0.351" />

    <EditText
        android:id="@+id/wightInputBox"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Input Number"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/labelforinputboxage2"
        app:layout_constraintTop_toBottomOf="@+id/hightInputBox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/labelforinputboxage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Weight_inputbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputBox"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/resetbtn"
        android:layout_width="140dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/BMIlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Your BMI:"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetbtn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/BMIlabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00.0"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMIlabel"
        app:layout_constraintVertical_bias="0.076" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="289dp"
        android:layout_height="25dp"
        android:max="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMIlabel2"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/rangeLabel"
        android:layout_width="177dp"
        android:layout_height="25dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="9dp"
        android:text="Range"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMIlabel2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/switchPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tracker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.813" />


</androidx.constraintlayout.widget.ConstraintLayout>